# auto-sftp

./: README.md  pyproject.toml  scheduled_run.xml
.pdm.old/: pyproject.toml
config/: settings.toml
config/db/: settings.toml
config/ssh/: .secrets.example.toml  settings.toml
requirements/: requirements.dev.txt  requirements.txt
scripts/: generate_ssh_keys.sh  run_backup.ps1
src/auto_sftp/: __main__.py  main.py  test.py
src/auto_sftp/core/: __init__.py  config.py  constants.py  dependencies.py  paths.py
src/auto_sftp/core/helpers/: __init__.py
src/auto_sftp/core/helpers/cli/: __init__.py
src/auto_sftp/core/helpers/cli/spinners/: __init__.py  methods.py
src/auto_sftp/modules/sort/: __init__.py  __methods.py
src/auto_sftp/modules/ssh_mod/context/: __init__.py  classes.py  methods.py
src/ssh_docuhost/: __main__.py  main.py
src/ssh_docuhost/core/: __init__.py  config.py
src/ssh_docuhost/core/helpers/: __init__.py
src/ssh_docuhost/core/helpers/os/: __init__.py  methods.py
src/ssh_docuhost/modules/ssh_mod/: __init__.py  methods.py
src/ssh_docuhost/modules/ssh_mod/context/: __init__.py  classes.py  methods.py
